--- a/saitae-web/src/main/webapp/pages/listaRepresentantes.xhtml
+++ b/saitae-web/src/main/webapp/pages/listaRepresentantes.xhtml
@@ -30,10 +30,18 @@
                                     #{representanteController.nombreGrado}
                                 </f:facet>
                                 <p:column headerText="Dui" style="width: 100px;">
-                                    <p:outputLabel value="#{r.persona.idpersona}"/>
+                                    #{r.persona.idpersona}
                                 </p:column>
-                                <p:column headerText="Dui">
-                                    <p:outputLabel value="#{r.persona.personaNombre} #{r.persona.personaApellido}"/>
+                                <p:column headerText="Nombre del Representado">
+                                    #{r.persona.personaNombre} #{r.persona.personaApellido}
+                                </p:column>
+
+                                <p:column headerText="Nombre del Representante">
+                                    #{r.estudianteRepresentante.persona.personaNombre} 
+                                    #{r.estudianteRepresentante.persona.personaApellido}
+                                </p:column>
+                                
+                                <p:column headerText="Firma" style="width: 25%;">
                                 </p:column>
                             </p:dataTable>
                         </p:panelGrid>
