falta notificaciones paquetes y contribuciones

--- a/saitae-web/src/main/webapp/pages/horario.xhtml
+++ b/saitae-web/src/main/webapp/pages/horario.xhtml
@@ -76,8 +76,8 @@
                         <p:message for="maestro"/>
 
                         <p:column/>
-                        <p:commandButton value="Guaradr" actionListener="#{horarioController.guardar()}"
-                                         update="form f1" oncomplete="PF('Dhorario').hide()"/>
+                        <p:commandButton value="Guardar" actionListener="#{horarioController.guardar()}"
+                                         style="width: 190px"           update="form f1" oncomplete="PF('Dhorario').hide()"/>
 
                         <p:column/>
                     </h:panelGrid>
