--- a/saitae-web/src/main/webapp/pages/academico.xhtml
+++ b/saitae-web/src/main/webapp/pages/academico.xhtml
@@ -7,7 +7,6 @@
     xmlns:p="http://primefaces.org/ui"
     xmlns:f="http://xmlns.jcp.org/jsf/core"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-    xmlns:t="http://java.sun.com/jsf/composite/components/autentia"
     xmlns:o="http://omnifaces.org/ui">
     <body>
         <ui:composition template="./../WEB-INF/template/plantilla1.xhtml">
@@ -168,7 +167,7 @@
                                 <p:ajax event="rowEditCancel" listener="#{tipoController.onRowCancel}" update=":form:msgs" />
 
 
-                                <p:column headerText="Id" style="width: 8px;">
+                                <p:column headerText="Nivel" style="width: 20px;">
                                     <p:cellEditor>
                                         <f:facet name="output">
                                             <p:outputLabel value="#{g.gradoPK.idgrado}" />
